[gd_scene load_steps=5 format=3 uid="uid://da52xtucg8lsq"]

[ext_resource type="PackedScene" uid="uid://cbm4rqw2ae3af" path="res://scenes/bun.tscn" id="1_g277a"]
[ext_resource type="Script" path="res://scripts/player.gd" id="1_q4o20"]
[ext_resource type="AudioStream" uid="uid://cepddlqe8oul2" path="res://audio/walk.mp3" id="3_3svm2"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_o1q05"]
radius = 0.343114
height = 0.905666

[node name="player" type="CharacterBody3D"]
script = ExtResource("1_q4o20")

[node name="pivot" type="Node3D" parent="."]

[node name="bun" parent="pivot" instance=ExtResource("1_g277a")]

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.453427, 0)
shape = SubResource("CapsuleShape3D_o1q05")

[node name="walknoise" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_3svm2")
volume_db = -15.0
pitch_scale = 0.71
parameters/looping = true

[connection signal="is_not_running" from="." to="." method="_on_is_not_running"]
[connection signal="is_not_running" from="." to="pivot/bun" method="_on_player_is_not_running"]
[connection signal="is_running" from="." to="." method="_on_is_running"]
[connection signal="is_running" from="." to="pivot/bun" method="_on_player_is_running"]
